Fix: Stop external link pseudo-element wrapping to next line, closes #67

--- a/web/wp-content/themes/lf-theme/source/scss/components/_link-icons.scss
+++ b/web/wp-content/themes/lf-theme/source/scss/components/_link-icons.scss
@@ -6,7 +6,7 @@
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center center;
-        margin-left: 0.3em;
+        margin-left: 0.1em;
         padding-right: 0.75em;
     }
 
